# FPM_jclub

./: .gitignore  .pre-commit-config.yaml  G2_wflow.toml  README.md  fpm.rsp  fpm.toml  xig.npy
app/: main.f90  pyMain.py  w0RE.f90
c_wrapper/: jclub_c.f90
python/: README.md  build-requirements.txt  meson.build  pyproject.toml
python/jclub/: __init__.py  flowAna.py  jack.py  openqcdio.py  wloops.py
python/jclub/compiled/: __init__.py
python/tests/: test_check.py
src/: colours.f90  flowAna.f90  jack.f90  openQCDIO.f90  splineOperations.f90  trinFort.f90  types.f90  wloops.f90
